HP871X/HP871X/hp871x.h


/*****************************************************************************/
/*  STANDARD SECTION                                                         */
/*  Constants and function prototypes for HP standard functions.             */
/*****************************************************************************/

/*---------------------------------------------------------------------------*/
/* DEVELOPER: Remove what you don't need from this standard function         */
/*              section, with the exception that VPP required functions      */
/*              may not be removed.                                          */
/*            Don't add to this section - add to the instrument specific     */
/*              section below.                                               */
/*            Don't change section - if you need to "change" the prototype   */
/*              of a standard function, delete it from this section and      */
/*              add a new function (named differently) in the instrument     */
/*              specific section.                                            */
/*---------------------------------------------------------------------------*/

	/***************************************************/
	/*  Standard constant error conditions returned    */
	/*  by driver functions.                           */
	/*    HP Common Error numbers start at BFFC0D00    */
	/*    The parameter errors extend the number of    */
	/*      errors over the eight defined in VPP 3.4   */
	/***************************************************/

#define hp871x_INSTR_ERROR_NULL_PTR      (_VI_ERROR+0x3FFC0D02L) /* 0xBFFC0D02 */
#define hp871x_INSTR_ERROR_RESET_FAILED  (_VI_ERROR+0x3FFC0D03L) /* 0xBFFC0D03 */
#define hp871x_INSTR_ERROR_UNEXPECTED    (_VI_ERROR+0x3FFC0D04L) /* 0xBFFC0D04 */
#define hp871x_INSTR_ERROR_INV_SESSION   (_VI_ERROR+0x3FFC0D05L) /* 0xBFFC0D05 */
#define hp871x_INSTR_ERROR_LOOKUP        (_VI_ERROR+0x3FFC0D06L) /* 0xBFFC0D06 */
#define hp871x_INSTR_ERROR_DETECTED      (_VI_ERROR+0x3FFC0D07L) /* 0xBFFC0D07 */

#define hp871x_INSTR_ERROR_PARAMETER9    (_VI_ERROR+0x3FFC0D20L) /* 0xBFFC0D20 */
#define hp871x_INSTR_ERROR_PARAMETER10   (_VI_ERROR+0x3FFC0D21L) /* 0xBFFC0D21 */
#define hp871x_INSTR_ERROR_PARAMETER11   (_VI_ERROR+0x3FFC0D22L) /* 0xBFFC0D22 */
#define hp871x_INSTR_ERROR_PARAMETER12   (_VI_ERROR+0x3FFC0D23L) /* 0xBFFC0D23 */
#define hp871x_INSTR_ERROR_PARAMETER13   (_VI_ERROR+0x3FFC0D24L) /* 0xBFFC0D24 */
#define hp871x_INSTR_ERROR_PARAMETER14   (_VI_ERROR+0x3FFC0D25L) /* 0xBFFC0D25 */
#define hp871x_INSTR_ERROR_PARAMETER15   (_VI_ERROR+0x3FFC0D26L) /* 0xBFFC0D26 */
#define hp871x_INSTR_ERROR_PARAMETER16   (_VI_ERROR+0x3FFC0D27L) /* 0xBFFC0D27 */
#define hp871x_INSTR_ERROR_PARAMETER17   (_VI_ERROR+0x3FFC0D28L) /* 0xBFFC0D28 */
#define hp871x_INSTR_ERROR_PARAMETER18   (_VI_ERROR+0x3FFC0D29L) /* 0xBFFC0D29 */

	/***************************************************/
	/*  Constants used by function hp871x_timeOut      */
	/***************************************************/

#define hp871x_TIMEOUT_MAX         2147483647L
#define hp871x_TIMEOUT_MIN         0L

	/***************************************************/
	/*  Required plug and play functions from VPP-3.1  */
	/***************************************************/

ViStatus _VI_FUNC hp871x_init
			(ViRsrc     resourceName,
			 ViBoolean  IDQuery,
			 ViBoolean  resetDevice,
			 ViPSession instrumentHandle);


ViStatus _VI_FUNC hp871x_close
			(ViSession  instrumentHandle);


ViStatus _VI_FUNC hp871x_reset
			(ViSession  instrumentHandle);


ViStatus _VI_FUNC hp871x_self_test
			(ViSession  instrumentHandle,
			 ViPInt32   selfTestResult,
			 ViPString  selfTestMessage);


ViStatus _VI_FUNC hp871x_error_query
			(ViSession  instrumentHandle,
			 ViPInt32   errorCode,
			 ViPString  errorMessage);


ViStatus _VI_FUNC hp871x_error_message
			(ViSession  instrumentHandle,
			 ViStatus   statusCode,
			 ViPString  message);


ViStatus _VI_FUNC hp871x_revision_query
			(ViSession  instrumentHandle,
			 ViPString  instrumentDriverRevision,
			 ViPString  firmwareRevision);



	/***************************************************/
	/*  HP standard utility functions                  */
	/***************************************************/

ViStatus _VI_FUNC hp871x_timeOut
			(ViSession  instrumentHandle,
			 ViInt32    setTimeOut);


ViStatus _VI_FUNC hp871x_timeOut_Q
			(ViSession  instrumentHandle,
			 ViPInt32   timeOut);


ViStatus _VI_FUNC hp871x_errorQueryDetect
			(ViSession  instrumentHandle,
			 ViBoolean  setErrorQueryDetect);


ViStatus _VI_FUNC hp871x_errorQueryDetect_Q
			(ViSession  instrumentHandle,
			 ViPBoolean errorQueryDetect);


ViStatus _VI_FUNC hp871x_dcl
			(ViSession  instrumentHandle);


ViStatus _VI_FUNC hp871x_opc_Q
			(ViSession  instrumentHandle,
			 ViPBoolean instrumentReady);



	/***************************************************/
	/*  HP standard status functions                   */
	/***************************************************/

ViStatus _VI_FUNC hp871x_readStatusByte_Q
			(ViSession  instrumentHandle,
			 ViPInt32   statusByte);


ViStatus _VI_FUNC hp871x_operEvent_Q
			(ViSession  instrumentHandle,
			 ViPInt32   operationEventRegister);


ViStatus _VI_FUNC hp871x_operCond_Q
			(ViSession  instrumentHandle,
			 ViPInt32   operationConditionRegister );


ViStatus _VI_FUNC hp871x_quesEvent_Q
			(ViSession  instrumentHandle,
			 ViPInt32   questionableEventRegister );


ViStatus _VI_FUNC hp871x_quesCond_Q
			(ViSession  instrumentHandle,
			 ViPInt32   questionableConditionRegister );



	/***************************************************/
	/*  HP standard command passthrough functions      */
	/***************************************************/

ViStatus _VI_FUNC hp871x_cmd
			(ViSession  instrumentHandle,
			 ViString   sendStringCommand);


ViStatus _VI_FUNC hp871x_cmdString_Q
			(ViSession  instrumentHandle,
			 ViString   queryStringCommand, 
			     ViInt32    stringSize,
			 ViPString  stringResult);

	
ViStatus _VI_FUNC hp871x_cmdInt
			(ViSession  instrumentHandle,
			 ViString   sendIntegerCommand,
			 ViInt32    sendInteger);


ViStatus _VI_FUNC hp871x_cmdInt16_Q
			(ViSession  instrumentHandle,
			 ViString   queryI16Command,
			 ViPInt16   i16Result);


ViStatus _VI_FUNC hp871x_cmdInt32_Q
			(ViSession  instrumentHandle,
			 ViString   queryI32Command,
			 ViPInt32   i32Result);


ViStatus _VI_FUNC hp871x_cmdReal
			(ViSession  instrumentHandle,
			 ViString   sendRealCommand,
			 ViReal64   sendReal);


ViStatus _VI_FUNC hp871x_cmdReal64_Q
			(ViSession  instrumentHandle,
			 ViString   queryRealCommand,
			 ViPReal64  realResult);


/* End of HP standard declarations */
/*---------------------------------------------------------------------------*/


/*****************************************************************************/
/*  INSTRUMENT SPECIFIC SECTION                                              */
/*  Constants and function prototypes for instrument specific functions.     */
/*****************************************************************************/

/*---------------------------------------------------------------------------*/
/* DEVELOPER: Add constants and function prototypes here.                    */
/*            As a matter of style, add the constant #define's first,        */
/*              followed by function prototypes.                             */
/*            Remember that function prototypes must be consistent with      */
/*              the driver's function panel prototypes.                      */
/*---------------------------------------------------------------------------*/

	/***************************************************/
	/*  Instrument specific constants                  */
	/***************************************************/

#define hp871x_NO_MATCH_ERROR     		(_VI_ERROR+0x3FFC0D30L) /* 0xBFFC0D30 */
#define hp871x_MASS_STORAGE_ERROR  		(_VI_ERROR+0x3FFC0D31L) /* 0xBFFC0D31 */
#define hp871x_MEAS_CONFLICT_ERROR 		(_VI_ERROR+0x3FFC0D32L) /* 0xBFFC0D32 */
#define hp871x_READ_MATCH_ERROR 		(_VI_ERROR+0x3FFC0D33L) /* 0xBFFC0D33 */
#define hp871x_PROG_LOAD_ERROR  		(_VI_ERROR+0x3FFC0D34L) /* 0xBFFC0D34 */
#define hp871x_FILE_NOT_FOUND_ERROR		(_VI_ERROR+0x3FFC0D35L) /* 0xBFFC0D35 */
#define hp871x_INVALID_CHANNEL_ERROR	(_VI_ERROR+0x3FFC0D36L) /* 0xBFFC0D36 */

/******   Used by Function hp871x_preset   *****/
#define hp871x_PRESET_DEFAULT  "DEFAULT"
#define hp871x_PRESET_FACTORY  "FACTORY"

/******   Used by Function hp871x_sweepStep   *****/
/* #define hp871x_ON              "ON"  */
/* #define hp871x_OFF             "OFF" */
/* #define hp871x_Q               "?"   */

	/***************************************************/
	/*  Instrument specific functions                  */
	/***************************************************/

ViStatus _VI_FUNC hp871x_preset( 
	ViSession vi, 
		ViString request);