HP871X/HP871X/hp871x.bas

Attribute VB_Name = "Module1"
'*****************************************************************************
'*  hp871x.bas                                                               *
'*  Copyright (C) 1998 Hewlett-Packard Company                               *
'*---------------------------------------------------------------------------*
'*  Driver for hp871x, $instrument desc$                                     *
'*  Driver Version: A.01.00                                                  *
'*****************************************************************************

'*****************************************************************************
'*  STANDARD SECTION                                                         *
'*  Constants and function prototypes for HP standard functions.             *
'*****************************************************************************

'*---------------------------------------------------------------------------*
'* DEVELOPER: Remove what you don't need from this standard function         *
'*              section, with the exception that VPP required functions      *
'*              may not be removed.                                          *
'*            Don't add to this section - add to the instrument specific     *
'*              section below.                                               *
'*            Don't change section - if you need to "change" the prototype   *
'*              of a standard function, delete it from this section and      *
'*              add a new function (named differently) in the instrument     *
'*              specific section.                                            *
'*---------------------------------------------------------------------------*

'        ***************************************************
'        *  Standard constant error conditions returned    *
'        *  by driver functions.                           *
'        *    HP Common Error numbers start at BFFC0D00    *
'        *    The parameter errors extend the number of    *
'        *      errors over the eight defined in VPP 3.4   *
'        ***************************************************

Global Const hp871x_INSTR_ERROR_NULL_PTR = &HBFFC0D02
Global Const hp871x_INSTR_ERROR_RESET_FAILED = &HBFFC0D03
Global Const hp871x_INSTR_ERROR_UNEXPECTED = &HBFFC0D04
Global Const hp871x_INSTR_ERROR_INV_SESSION = &HBFFC0D05
Global Const hp871x_INSTR_ERROR_LOOKUP = &HBFFC0D06
Global Const hp871x_INSTR_ERROR_DETECTED = &HBFFC0D07

Global Const hp871x_INSTR_ERROR_PARAMETER9 = &HBFFC0D20
Global Const hp871x_INSTR_ERROR_PARAMETER10 = &HBFFC0D21
Global Const hp871x_INSTR_ERROR_PARAMETER11 = &HBFFC0D22
Global Const hp871x_INSTR_ERROR_PARAMETER12 = &HBFFC0D23
Global Const hp871x_INSTR_ERROR_PARAMETER13 = &HBFFC0D24
Global Const hp871x_INSTR_ERROR_PARAMETER14 = &HBFFC0D25
Global Const hp871x_INSTR_ERROR_PARAMETER15 = &HBFFC0D26
Global Const hp871x_INSTR_ERROR_PARAMETER16 = &HBFFC0D27
Global Const hp871x_INSTR_ERROR_PARAMETER17 = &HBFFC0D28
Global Const hp871x_INSTR_ERROR_PARAMETER18 = &HBFFC0D29

'        ***************************************************
'        *  Constants used by system status functions      *
'        *    These defines are bit numbers which define   *
'        *    the operation and questionable registers.    *
'        *    They are instrument specific.                *
'        ***************************************************

'*---------------------------------------------------------------------------*
'* DEVELOPER: Modify these bit values to reflect the meanings of the         *
'*            operation and questionable status registers for your           *
'*              instrument.                                                  *
'*---------------------------------------------------------------------------*

Global Const hp871x_QUES_BYTE0 = 1
Global Const hp871x_QUES_BYTE1 = 2
Global Const hp871x_QUES_BYTE2 = 4
Global Const hp871x_QUES_BYTE3 = 8
Global Const hp871x_QUES_BYTE4 = 16
Global Const hp871x_QUES_BYTE5 = 32
Global Const hp871x_QUES_BYTE6 = 64
Global Const hp871x_QUES_BYTE7 = 128
Global Const hp871x_QUES_BYTE8 = 256
Global Const hp871x_QUES_BYTE9 = 512
Global Const hp871x_QUES_BYTE10 = 1024
Global Const hp871x_QUES_BYTE11 = 2048
Global Const hp871x_QUES_BYTE12 = 4096
Global Const hp871x_QUES_BYTE13 = 8192
Global Const hp871x_QUES_BYTE14 = 16384
Global Const hp871x_QUES_BYTE15 = 32768

Global Const hp871x_OPER_BYTE0 = 1
Global Const hp871x_OPER_BYTE1 = 2
Global Const hp871x_OPER_BYTE2 = 4
Global Const hp871x_OPER_BYTE3 = 8
Global Const hp871x_OPER_BYTE4 = 16
Global Const hp871x_OPER_BYTE5 = 32
Global Const hp871x_OPER_BYTE6 = 64
Global Const hp871x_OPER_BYTE7 = 128
Global Const hp871x_OPER_BYTE8 = 256
Global Const hp871x_OPER_BYTE9 = 512
Global Const hp871x_OPER_BYTE10 = 1024
Global Const hp871x_OPER_BYTE11 = 2048
Global Const hp871x_OPER_BYTE12 = 4096
Global Const hp871x_OPER_BYTE13 = 8192
Global Const hp871x_OPER_BYTE14 = 16384
Global Const hp871x_OPER_BYTE15 = 32768

'        ***************************************************
'        *  Constants used by function hp871x_timeOut      *
'        ***************************************************

Global Const hp871x_TIMEOUT_MAX = 2147483647
Global Const hp871x_TIMEOUT_MIN = 1&

'        ***************************************************
'        *  Required plug and play functions from VPP-3.1  *
'        ***************************************************

Declare Function hp871x_init Lib "hp871x_32.dll" _
        (ByVal resourceName As String, _
         ByVal IDQuery As Integer, _
         ByVal resetDevice As Integer, _
               instrumentHandle As Long) As Long

Declare Function hp871x_close Lib "hp871x_32.dll" _
        (ByVal instrumentHandle As Long) As Long

Declare Function hp871x_reset Lib "hp871x_32.dll" _
        (ByVal instrumentHandle As Long) As Long

Declare Function hp871x_self_test Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           selfTestResult As Integer, _
     ByVal selfTestMessage As String) As Long

Declare Function hp871x_error_query Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           errorCode As Long, _
     ByVal errorMessage As String) As Long

Declare Function hp871x_error_message Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal statusCode As Long, _
     ByVal message As String) As Long

Declare Function hp871x_revision_query Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal instrumentDriverRevision As String, _
     ByVal firmwareRevision As String) As Long


'        ***************************************************
'        *  HP standard utility functions                  *
'        ***************************************************

Declare Function hp871x_timeOut Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal setTimeOut As Long) As Long

Declare Function hp871x_timeOut_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           timeOut As Long) As Long

Declare Function hp871x_errorQueryDetect Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal setErrorQueryDetect As Integer) As Long

Declare Function hp871x_errorQueryDetect_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           errorQueryDetect As Integer) As Long

Declare Function hp871x_dcl Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long) As Long

Declare Function hp871x_opc_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           instrumentReady As Integer) As Long


'        ***************************************************
'        *  HP standard status functions                   *
'        ***************************************************

Declare Function hp871x_readStatusByte_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           statusByte As Integer) As Long

Declare Function hp871x_operEvent_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           operationEventRegister As Integer) As Long

Declare Function hp871x_operCond_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           operationConditionRegister As Integer) As Long

Declare Function hp871x_quesEvent_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           questionableEventRegister As Integer) As Long

Declare Function hp871x_quesCond_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
           questionableConditionRegister As Integer) As Long


'        ***************************************************
'        *  HP standard command passthrough functions      *
'        ***************************************************

Declare Function hp871x_cmd Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal sendStringCommand As String) As Long

Declare Function hp871x_cmdString_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryStringCommand As String, _
     ByVal stringSize As Long, _
     ByVal stringResult As String) As Long

Declare Function hp871x_cmdInt Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal sendIntegerCommand As String, _
     ByVal sendInteger As Long) As Long

Declare Function hp871x_cmdInt16_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryI16Command As String, _
           i16Result As Integer) As Long

Declare Function hp871x_cmdInt32_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryI32Command As String, _
           i32Result As Long) As Long

Declare Function hp871x_cmdReal Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal sendRealCommand As String, _
     ByVal sendReal As Double) As Long

Declare Function hp871x_cmdReal64_Q Lib "hp871x_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryRealCommand As String, _
           realResult As Double) As Long

'* End of HP standard declarations */
'*---------------------------------------------------------------------------*


'*****************************************************************************
'*  INSTRUMENT SPECIFIC SECTION                                              *
'*  Constants and function prototypes for instrument specific functions.     *
'*****************************************************************************

'*---------------------------------------------------------------------------*
'* DEVELOPER: Add constants and function prototypes here.                    *
'*            As a matter of style, add the constant Global Const's first,        *
'*              followed by function prototypes.                             *
'*            Remember that function prototypes must be consistent with      *
'*              the driver's function panel prototypes.                      *
'*---------------------------------------------------------------------------*

'        ***************************************************
'        *  Instrument specific constants                  *
'        ***************************************************
Global Const hp871x_NO_MATCH_ERROR = &H3FFC0D30
Global Const hp871x_MASS_STORAGE_ERROR = &H3FFC0D31
Global Const hp871x_MEAS_CONFLICT_ERROR = &H3FFC0D32
Global Const hp871x_READ_MATCH_ERROR = &H3FFC0D33
Global Const hp871x_PROG_LOAD_ERROR = &H3FFC0D34
Global Const hp871x_FILE_NOT_FOUND_ERROR = &H3FFC0D35
Global Const hp871x_INVALID_CHANNEL_ERROR = &H3FFC0D36

' Used by Function hp871x_preset
Global Const hp871x_PRESET_DEFAULT = "DEFAULT"
Global Const hp871x_PRESET_FACTORY = "FACTORY"
